; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_popen.c_close_all_files.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_popen.c_close_all_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@fp_head = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @close_all_files() #0 {
  br label %1

1:                                                ; preds = %19, %0
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fp_head, align 8
  %3 = icmp ne %struct.TYPE_2__* %2, null
  br i1 %3, label %4, label %20

4:                                                ; preds = %1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fp_head, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %4
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fp_head, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @Pclose(i32 %12)
  br label %19

14:                                               ; preds = %4
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fp_head, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @Fclose(i32 %17)
  br label %19

19:                                               ; preds = %14, %9
  br label %1

20:                                               ; preds = %1
  ret void
}

declare dso_local i32 @Pclose(i32) #1

declare dso_local i32 @Fclose(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
